--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "liquidrocketpy"
-version = "0.0.2"
+version = "0.0.5"
 authors = [
   { name="Nicholas Cassarino", email="nmcassa804@outlook.com" },
 ]
@@ -18,3 +18,7 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
+
+[project.urls]
+"Homepage" = "https://github.com/nmcassa/liquidrocketpy"
+"Bug Tracker" = "https://github.com/nmcassa/liquidrocketpy/issues"
